force-app/main/default/objects/Order_Item__c/Order_Item__c.object-meta.xml
<CustomObject>
    <label>Order Item</label>
    <nameField>
        <displayFormat>ORD_ITM-{0}</displayFormat>
        <label>Order Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>