force-app/main/default/objects/Order_Item__c/fields/Account_id__c.field-meta.xml
<CustomField>
    <fullName>Account_id__c</fullName>
    <formula>Order__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account id</label>
    <type>Text</type>
</CustomField>