force-app/main/default/objects/Order_Item__c/fields/Banner_Partner__c.field-meta.xml
<CustomField>
    <fullName>Banner_Partner__c</fullName>
    <formula>Order__r.Banner_Partner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banner Partner</label>
    <type>Text</type>
</CustomField>