force-app/main/default/objects/Order_Item__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BF - Brand</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Brand__c.Supplier__r.Name</field>
            <operation>equals</operation>
            <value>B-F</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>