force-app/main/default/objects/Order_Item__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <formula>Product__r.Brand__r.Name</formula>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>