force-app/main/default/objects/Order_Item__c/fields/Carton__c.field-meta.xml
<CustomField>
    <fullName>Carton__c</fullName>
    <description>Case</description>
    <inlineHelpText>Case</inlineHelpText>
    <label>Carton</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>