force-app/main/default/objects/Order_Item__c/fields/Carton_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Carton_Bonus__c</fullName>
    <label>Carton (Bonus)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>