force-app/main/default/objects/Order_Item__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <inlineHelpText>Create a validation rule, has to be greater than the discount or less/equal to the tolerance</inlineHelpText>
    <label>Discount - ($)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>