force-app/main/default/objects/Order_Item__c/fields/Loaded_Discount__c.field-meta.xml
<CustomField>
    <fullName>Loaded_Discount__c</fullName>
    <description>The discount that was loaded at the wholesaler at the time this order was placed</description>
    <inlineHelpText>The discount that was loaded at the wholesaler at the time this order was placed</inlineHelpText>
    <label>Loaded Discount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>