force-app/main/default/objects/Order_Item__c/fields/Max_PA_Per_Case__c.field-meta.xml
<CustomField>
    <fullName>Max_PA_Per_Case__c</fullName>
    <description>Max PA Per Case</description>
    <label>Max PA Per Case</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>