force-app/main/default/objects/Order_Item__c/fields/Missing_Material__c.field-meta.xml
<CustomField>
    <fullName>Missing_Material__c</fullName>
    <label>Missing Material</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>