force-app/main/default/objects/Order_Item__c/fields/Order_Item_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Sequence__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Order Item Sequence</label>
    <type>AutoNumber</type>
</CustomField>