force-app/main/default/objects/Order_Item__c/fields/Outlet_PA__c.field-meta.xml
<CustomField>
    <fullName>Outlet_PA__c</fullName>
    <label>Outlet PA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>