force-app/main/default/objects/Order_Item__c/fields/Price_Ref_Material__c.field-meta.xml
<CustomField>
    <fullName>Price_Ref_Material__c</fullName>
    <formula>Product__r.Pricing_Reference_Material__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Ref Material</label>
    <type>Text</type>
</CustomField>