force-app/main/default/objects/Order_Item__c/fields/PRM_Units_Per_Case__c.field-meta.xml
<CustomField>
    <fullName>PRM_Units_Per_Case__c</fullName>
    <label>PRM Units Per Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>