force-app/main/default/objects/Order_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BF - Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.Brand__c</field>
            <operation>equals</operation>
            <valueField>$Source.Brand__c</valueField>
        </filterItems>
        <filterItems>
            <field>Product__c.Market__r.Name</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>