force-app/main/default/objects/Order_Item__c/fields/Reporting_Brand__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Brand__c</fullName>
    <formula>Product__r.Brand__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Brand</label>
    <type>Text</type>
</CustomField>