force-app/main/default/objects/Order_Item__c/fields/SAP_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Number__c</fullName>
    <formula>Product__r.ProductCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Material Number</label>
    <type>Text</type>
</CustomField>