force-app/main/default/objects/Order_Item__c/fields/Total_Bonus_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Bonus_Units__c</fullName>
    <formula>(Carton_Bonus__c * Product__r.Pack_Quantity__c ) + Unit_Bonus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Bonus Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>