force-app/main/default/objects/Order_Item__c/fields/Total_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Cases__c</fullName>
    <description>Calculated in trigger, rolled up to Order</description>
    <label>Total Cases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>