force-app/main/default/objects/Order_Item__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>