force-app/main/default/objects/Order_Item__c/fields/Unit_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Unit_Bonus__c</fullName>
    <label>Unit (Bonus)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>