force-app/main/default/objects/Order_Item__c/fields/Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler__c</fullName>
    <description>Wholesaler (Link to the Wholesaler Product) Object</description>
    <formula>Order__r.Wholesaler_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Wholesaler (Link to the Wholesaler Product) Object</inlineHelpText>
    <label>ECC - Wholesaler</label>
    <type>Text</type>
</CustomField>