force-app/main/default/objects/Order_Item__c/fields/Wholesaler_Product__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wholesaler Product</label>
    <referenceTo>Wholesaler_Product__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>