force-app/main/default/objects/Order_Item__c/fields/Wholesaler_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Product_Name__c</fullName>
    <formula>Wholesaler_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler Product Name</label>
    <type>Text</type>
</CustomField>