force-app/main/default/objects/Order_Item__c/fields/Wholesaler_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Product_Number__c</fullName>
    <formula>Wholesaler_Product__r.Wholesaler_Product_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler Product Number</label>
    <type>Text</type>
</CustomField>