force-app/main/default/objects/Order_Item__c/fields/Wholesaler_SAP_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_SAP_Product_Number__c</fullName>
    <formula>RIGHT( SAP_Material_Number__c , 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler SAP Product Number</label>
    <type>Text</type>
</CustomField>