force-app/main/default/objects/Order_Item__c/fields/X9L_Cases2__c.field-meta.xml
<CustomField>
    <fullName>X9L_Cases2__c</fullName>
    <label>9L Cases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>