force-app/main/default/objects/Order_Item__c/validationRules/Free_Stock_Discount_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Free_Stock_Discount_Check</fullName>
    <active>true</active>
    <description>Purpose: To ensure we don&#39;t have both Free Stock and Discount on the Same Item Level</description>
    <errorConditionFormula>AND((Carton_Bonus__c   &gt; 0  ||   Unit_Bonus__c  &gt; 0) &amp;&amp;  Discount__c &gt; 0)</errorConditionFormula>
    <errorMessage>Free Stock &amp; Discounts can NOT be applied to the same item level!</errorMessage>
</ValidationRule>