force-app/main/default/objects/Order_Item__c/validationRules/Price_Tolerance_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Tolerance_Check</fullName>
    <active>false</active>
    <description>Validation to see if Price Override will work</description>
    <errorConditionFormula>Discount__c   &gt;  Max_PA_Per_Case__c</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Price Tolerance Reached - Please Enter a Lower Amount</errorMessage>
</ValidationRule>